# WW_iBOP_data_preprocessing

./: pyproject.toml  readme.md  requirements.txt  start_checklist.md
figures/step2_identification_outlier_runs_results/: outlier_report_a.csv  outlier_report_s.csv
scripts/: step1_extracting_data_from_full_dataset.py  step2_identification_of_potential_outlier_runs.py  step3_outlier_confirmation_with_triplicate_plots.py  step4_final_data_preprocessing.py  suppl_analysis1_number_of_samples_per_run.py  suppl_analysis2_run_raw_data_plot.py
src/custom_python_tools/: acs_data_reader.py  acs_outlier_detection_pipeline.py  acs_scattering_coefficient_calculation.py  acs_utils.py
src/custom_python_tools/acs_outlier_detection_functions/: iterative.py  minmax.py  slope_576nm.py
