[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_python_tools"
version = "0.1.0"
description = "Custom package for functions"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pandas==3.0.1", "scipy==1.17.1", "matplotlib==3.10.8"]